# chunk-norris-ai

./: .gitattributes  .gitignore  README.md  app.py  check_graph.py  config.template.py  falkor_schema_loader.py  file_detector.py  file_parsers.py  logging_config.py  process_ontology.py  pyproject.toml  requirements.txt  start.sh  test.docx  test.txt  test_fix.py  test_ontology_fixes.py  test_ui_integration.py  test_upload_flow.py  test_upload_timing.py
data/: dump.rdb
falkordb/: graph_data.json  graph_queries.txt  ontology_result.json
prompts/: document_processing_prompt.mustache  document_summary.mustache  gpt4o_flow_chart_prompt.mustache  markdown_refinement_prompt.mustache  memory_graph_prompt.mustache  ontology_graph_prompt.mustache  text_processing_prompt.mustache
services/: __init__.py  factory.py  service_registry.py  utils.py
services/ai/: __init__.py  html_renderer.py  memory_graph_processor.py  ontology_graph_processor.py  ontology_graph_processor.py.bak  openai_service.py  rtf_ai_processor.py
services/converters/: __init__.py
services/ocr/: __init__.py  ocr_interface.py  tesseract_ocr.py
services/parsers/: __init__.py  docx_parser.py  file_detector.py  file_parser_interface.py  file_parsers.py  image_parser.py  pdf_parser.py  prompt_utils.py  rtf_parser.py  text_parser.py
static/rtf_previews/: rtf_preview_2669407f528848e8b376bdbd16042bc3.html  rtf_preview_80bdf1362d454f32a499d706a13f9f25.html
templates/: index.html
